[metadata]
# replace with your username:
name = sonnyparlin
version = 0.0.6
author = Sonny Parlin
author_email = ask@sparl.in
description = Build cluster from multiple identical longitude and latitude coordinates
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sonnyparlin/cluster_coords
project_urls =
    Bug Tracker = https://github.com/sonnyparlin/cluster_coords/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
